# app/services/dto/UserDTO.js
@@ -1,0 +1,10 @@
+class UserDTO{
+    id;
+    imie;
+    nazwisko
+    login;
+    haslo;
+    email;
+}
+
+module.exports = {UserDTO}
